[gd_scene load_steps=6 format=3 uid="uid://cxxqimabwhx1m"]

[ext_resource type="Script" path="res://Settings/settings.gd" id="1_gvuk7"]
[ext_resource type="Texture2D" uid="uid://daxwi5q5acq10" path="res://pong_assets/iLikeMyCheeseCrippyBruh.png" id="2_mf36a"]
[ext_resource type="FontFile" uid="uid://cklq7msrqwa31" path="res://pong_assets/Orbitron-Bold.ttf" id="3_mj0v5"]
[ext_resource type="AudioStream" uid="uid://c2rwx3gwytwt3" path="res://pong_assets/ping_pong_8bit_beeep.ogg" id="4_u8typ"]

[sub_resource type="LabelSettings" id="LabelSettings_nmmst"]
font = ExtResource("3_mj0v5")
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvuk7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mf36a")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "   Settings   "
label_settings = SubResource("LabelSettings_nmmst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MaxPoints" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
placeholder_text = "Max points "

[node name="PointCheck" type="CheckBox" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2

[node name="TimeLimit" type="TextEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Time Limit"

[node name="TimeCheck" type="CheckBox" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ReturnButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Return"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="ClickedButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u8typ")
volume_db = 11.0

[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/PointCheck" to="." method="_on_point_check_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/TimeCheck" to="." method="_on_time_check_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
